--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.2.12",
+    "lodash-es": "^4.17.21",
+    "marked": "^4.0.18",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
