--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.12",
+    "install": "^0.13.0",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.18",
+    "npm": "^8.16.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
