--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "@tinymce/tinymce-vue": "^5.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.12",
     "install": "^0.13.0",
