--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons": "^0.0.11",
     "@tinymce/tinymce-vue": "^5.0.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
     "element-plus": "^2.2.12",
     "howler": "^2.2.3",
     "install": "^0.13.0",
