--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "@tinymce/tinymce-vue": "^5.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "element-plus": "^2.2.12",
     "howler": "^2.2.3",
     "install": "^0.13.0",
+    "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.18",
     "md-editor-v3": "^2.2.1",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
+    "@types/js-cookie": "^2.2.6",
     "@types/sanitize-html": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
