--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "md-editor-v3": "^2.2.1",
     "npm": "^8.16.0",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.21",
     "sanitize-html": "^2.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0-0"
