--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dayjs": "^1.11.5",
     "element-plus": "^2.2.12",
     "howler": "^2.2.3",
+    "html-loader": "^4.1.0",
     "install": "^0.13.0",
     "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.21",
+    "markdown-loader": "^8.0.0",
     "marked": "^4.0.18",
     "md-editor-v3": "^2.2.1",
     "npm": "^8.16.0",
