--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "element-plus": "^2.2.12",
+    "github-markdown-css": "^5.1.0",
     "howler": "^2.2.3",
     "install": "^0.13.0",
     "js-cookie": "^2.2.1",
