--- a/package.json
+++ b/package.json
@@ -27,18 +27,19 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.21",
     "sanitize-html": "^2.7.1",
+    "sha1": "^1.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
     "@types/js-cookie": "^2.2.6",
+    "@types/nprogress": "^0.2.0",
     "@types/sanitize-html": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@types/nprogress": "^0.2.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
