--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-NODE_ENV=development
+NODE_ENV = 'development'
 VUE_APP_BASE_API = 'http://localhost:8088'
-VUE_APP_PORT=7090
+VUE_APP_PORT = '7090'
+VUE_APP_PROXY = 'false'
