模块化，请求类封装 2022/9/12

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ NODE_ENV = 'development'
 VUE_APP_BASE_API = 'http://localhost:8088'
 VUE_APP_PORT = '7090'
 VUE_APP_PROXY = 'false'
+VUE_APP_WS_UEL = 'ws://localhost:8088/websocket'
