--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tinymce/tinymce-vue": "^5.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "crypto-ts": "^1.0.2",
     "dayjs": "^1.11.5",
     "element-plus": "^2.2.12",
     "github-markdown-css": "^5.1.0",
